--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="sidebar__body__menu__btn sidebar__body__menu__elearning-btn">
                         <i class="fa-solid fa-book"></i>
                         <span>E-Learning <i class="fa-solid fa-angle-down"></i></span>
                     </a>
@@ -97,13 +97,13 @@
                 </ul>
 
                 <li>
-                    <a href="#">
+                    <a href="#" class="sidebar__body__menu__btn sidebar__body__menu__semesterwork-btn">
                         <i class="fa-solid fa-chart-simple"></i>
                         <span>Semester Work <i class="fa-solid fa-angle-down"></i></span>
                     </a>
                 </li>
 
-                <ul class="sidebar__body__sub-menu semesterwork-sub-menu" id="semesterwork">
+                <ul class="sidebar__body__sub-menu semesterwork-sub-menu">
                     <!-- sidebar side menu outer border -->
                     <div class="border">
                         <li>
@@ -149,7 +149,7 @@
     <!-- Extras -->
 
     <!-- 1. activity center -->
-    <!-- <div class="activity-center"></div> -->
+    <div class="activity-center"></div>
 
     <!-- 2. general popup -->
 
