--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
     <!-- 2. general popup -->
 
     <!-- 3. preloader -->
+
+    <!-- 4. sidebar menu -->
+
+    <!-- 4. sidebar -->
 </body>
 
 </html>
