--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- ===================================================== -->
     <!-- :::::::::::::: Sidebar Desktop Version :::::::::::::: -->
     <!-- ===================================================== -->
-    <aside class="sidebar">
+    <aside class="sidebar collapsed">
 
         <!-- sidebar header -->
         <div class="sidebar__header">
@@ -192,7 +192,7 @@
             +5
         </div>
 
-        
+
 
         <!-- Mobile Version -->
         <div class="term-timing">Fall 2022 - 2023</div>
