--- a/pages/main-scoreboard.html
+++ b/pages/main-scoreboard.html
@@ -30,7 +30,7 @@
     <!-- ===================================================== -->
     <!-- :::::::::::::: Sidebar Desktop Version :::::::::::::: -->
     <!-- ===================================================== -->
-    <aside class="sidebar">
+    <aside class="sidebar collapsed">
 
         <!-- sidebar header -->
         <div class="sidebar__header">
@@ -163,68 +163,159 @@
 
             <!-- content -->
             <div class="main-scoreboard__scoreboard">
-                <div class="main-scoreboard__scoreboard__board">
-                    <h2 class="main-scoreboard__scoreboard__board__wave-number">Wave #1</h2>
-                    <h1 class="main-scoreboard__scoreboard__board__wave-name">Warming Up</h1>
-                    <h3 class="main-scoreboard__scoreboard__board__wave-slogen">Lorem ipsum dolor sit amet.
-                </div>
-                <img class="main-scoreboard__scoreboard__board__img" src="">
+                <h2 class="main-scoreboard__scoreboard__wave-number">Wave <span>1</span></h2>
+                <h1 class="main-scoreboard__scoreboard__wave-name">Warming Up</h1>
+                <h3 class="main-scoreboard__scoreboard__wave-slogen">Lorem ipsum dolor sit amet.</h3>
+                <img class="main-scoreboard__scoreboard__img" src="../assets/images/phone.svg">
             </div>
 
 
             <div class="main-scoreboard__table">
                 <table>
 
-                    <!-- Head -->
+
                     <thead>
                         <tr>
                             <th>#</th>
                             <th>Student Name</th>
-                            <th>Faculty Department</th>
-                            <th>Student Level</th>
+                            <th>Faculty</th>
+                            <th>Level</th>
                             <th>ID</th>
                             <th>Score</th>
                         </tr>
                     </thead>
 
-                    <!-- Body -->
                     <tbody>
 
                         <tr>
                             <td>1</td>
                             <td class="name">
-                                <div class="img"><img src="../assets/images/user.jpg"></div>
-                                <span>Student 1 Name</span>
+                                <div class="img"><img src="../assets/images/Mohey.jpg"></div>
+                                <span>Mohey wael</span>
                             </td>
-                            <td>Faculty Department</td>
-                            <td>Student Level</td>
-                            <td>ID</td>
-                            <td>Score</td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>120</td>
                         </tr>
-
                         <tr>
                             <td>2</td>
-                            <td>
+                            <td class="name">
                                 <div class="img"><img src="../assets/images/user.jpg"></div>
-                                <span>Student 2 Name</span>
+                                <span>Omar Wagdy</span>
                             </td>
-                            <td>Faculty Department</td>
-                            <td>Student Level</td>
-                            <td>12312 - ID</td>
-                            <td>Score</td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181117</td>
+                            <td>110</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Khalid Asker</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181328</td>
+                            <td>97</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
                         </tr>
 
                         <tr>
-                            <td>3</td>
-                            <td>
+                            <td>5</td>
+                            <td class="name">
                                 <div class="img"><img src="../assets/images/user.jpg"></div>
-                                <span>Student 3 Name</span>
+                                <span>Ahmed Namees</span>
                             </td>
-                            <td>Faculty Department</td>
-                            <td>Student Level</td>
-                            <td>11121 - ID</td>
-                            <td>Score</td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181333</td>
+                            <td>66</td>
                         </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
+                        <tr>
+                            <td>4</td>
+                            <td class="name">
+                                <div class="img"><img src="../assets/images/user.jpg"></div>
+                                <span>Ahmed Maged</span>
+                            </td>
+                            <td>Engineering</td>
+                            <td>4</td>
+                            <td>1181058</td>
+                            <td>88</td>
+                        </tr>
+
 
                     </tbody>
                 </table>
