socrebaord partner details

--- a/pages/main-scoreboard.html
+++ b/pages/main-scoreboard.html
@@ -498,6 +498,78 @@
     <!-- 6. dialog as a header menus -->
     <!-- <dialog></dialog> -->
 
+    <div class="student-score-profile">
+
+        <div class="student-score-profile__banner">
+            <div class="student-score-profile__banner__img">
+                <img src="../assets/images/Mohey.jpg" alt="">
+            </div>
+
+            <div class="student-score-profile__banner__titlebox">
+                <div class="student-score-profile__banner__titlebox__title">Mohey wael</div>
+                <div class="student-score-profile__banner__titlebox__id">1181058</div>
+            </div>
+
+            <div class="student-score-profile__banner__points">
+                <div class="student-score-profile__banner__points__number">45</div>
+                <div class="student-score-profile__banner__points__point">points</div>
+            </div>
+
+        </div>
+
+        <div class="student-score-profile__details">
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+            <div class="student-score-profile__details__detailbox">
+                <div class="student-score-profile__details__detailbox__icon"><i class="fa-solid fa-fire"></i></div>
+                <div class="student-score-profile__details__detailbox__titlebox">
+                    <div class="student-score-profile__details__detailbox__titlebox__title">Streak name</div>
+                    <div class="student-score-profile__details__detailbox__titlebox__number">35 Days</div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
