--- a/pages/main-scoreboard.html
+++ b/pages/main-scoreboard.html
@@ -20,6 +20,7 @@
     <script src="../scripts/main.js" defer></script>
     <script src="../scripts/header.js" defer></script>
     <script src="../scripts/sidebar.js" defer></script>
+    <script src="../scripts/scoreboard.js" defer></script>
 
     <title>LMS | Home</title>
     <link rel="icon" href="../assets/images/lms-icon.png">
@@ -408,7 +409,97 @@
 
     <div class="mobile-menus">
         <!-- 4. sidebar menu -->
-        <div class="header-menu sidebar-menu"></div>
+        <div class="header-menu sidebar-menu">
+
+            <div class="sidebar-menu__logobox">
+                <div class="sidebar-menu__logobox__img">
+                    <img src="../assets/images/lms-icon.png" alt="">
+                </div>
+                <div class="sidebar-menu__logobox__textbox">
+                    <span>LMS</span>
+                    <span>Learning Management System</span>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="sidebar-menu__menu">
+                <ul class="sidebar__body__menu">
+                    <!-- sidebar menu label -->
+                    <span class="sidebar__body__menu__menu-label">General</span>
+                    <li>
+                        <a href="../index.html">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./pages/main-scoreboard.html" class="selected">
+                            <i class="fas fa-star"></i>
+                            <span>Scoreboard</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="sidebar__body__menu__btn sidebar__body__menu__elearning-btn elearning-sub-menu--mobile-btn">
+                            <i class="fa-solid fa-book"></i>
+                            <span>E-Learning <i class="fa-solid fa-angle-down"></i></span>
+                        </a>
+                    </li>
+
+                    <ul class="sidebar__body__sub-menu elearning-sub-menu--mobile">
+                        <!-- sidebar side menu outer border -->
+                        <div class="border">
+                            <li>
+                                <a href="">
+                                    <span>Quizzes</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <span>Assignments</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <span>Materials</span>
+                                </a>
+                            </li>
+                        </div>
+                    </ul>
+
+                    <li>
+                        <a href="#"
+                            class="sidebar__body__menu__btn sidebar__body__menu__semesterwork-btn semesterwork-sub-menu--mobile-btn">
+                            <i class="fa-solid fa-chart-simple"></i>
+                            <span>Semester Work <i class="fa-solid fa-angle-down"></i></span>
+                        </a>
+                    </li>
+
+                    <ul class="sidebar__body__sub-menu semesterwork-sub-menu--mobile">
+                        <!-- sidebar side menu outer border -->
+                        <div class="border">
+                            <li>
+                                <a href="">
+                                    <span>schedule</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <span>Grades book</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <span>Absence</span>
+                                </a>
+                            </li>
+                        </div>
+                    </ul>
+                </ul>
+
+            </div>
+        </div>
 
         <!-- 5. navbar menu -->
         <div class="header-menu navbar-menu">
@@ -570,6 +661,7 @@
         </div>
 
     </div>
+    <div class="banner-overlay"></div>
 </body>
 
 </html>
