--- a/pages/elearning-materials.html
+++ b/pages/elearning-materials.html
@@ -8,21 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Fontawesome Links -->
-    <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome/css/solid.css">
     <!-- <link rel="stylesheet" href="assets/fonts/fontawesome/css/brands.css"> -->
 
     <!-- Styles -->
-    <link rel="stylesheet" href="scss/dist/style.css">
+    <link rel="stylesheet" href="../scss/dist/style.css">
 
     <!-- Scripts -->
-    <script src="scripts/script.js" defer></script>
-    <script src="scripts/main.js" defer></script>
-    <script src="scripts/header.js" defer></script>
-    <script src="scripts/sidebar.js" defer></script>
+    <script src="../scripts/script.js" defer></script>
+    <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/sidebar.js" defer></script>
 
     <title>LMS | Home</title>
-    <link rel="icon" href="assets/images/lms-icon.png">
+    <link rel="icon" href="../assets/images/lms-icon.png">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 
             <!-- sidebar header icon -->
             <div class="sidebar__header__icon-img">
-                <img src="assets/images/lms-icon.png">
+                <img src="../assets/images/lms-icon.png">
             </div>
 
             <!-- sidebar header text -->
@@ -60,13 +60,13 @@
                 <!-- sidebar menu label -->
                 <span class="sidebar__body__menu__menu-label">General</span>
                 <li>
-                    <a href="./index.html">
+                    <a href="../index.html">
                         <i class="fas fa-home"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/main-scoreboard.html">
+                    <a href="../pages/main-scoreboard.html">
                         <i class="fas fa-star"></i>
                         <span>Scoreboard</span>
                     </a>
@@ -153,7 +153,7 @@
                     <div class="header__box__notification__menu"></div>
                 </button>
                 <button class="header__box__profile">
-                    <img src="assets/images/Mohey.jpg" alt="">
+                    <img src="../assets/images/Mohey.jpg" alt="">
                     <span>1181058</span>
                     <div class="header__box__profile__menu">
                         <li>
@@ -196,11 +196,113 @@
         <!-- ================================== -->
         <!-- :::::::::::::: Main :::::::::::::: -->
         <!-- ================================== -->
-        <main class="main">
+        <main class="main materials">
 
             <!-- content -->
 
+            <div class="main__title">
+                <span>Others</span>
+            </div>
 
+            <div class="main__extras">
+                <div class="main__extras__element">
+                    <i class="fa-solid fa-book"></i>
+                    <span>Question Bank</span>
+                </div>
+                <div class="main__extras__element">
+                    <i class="fa-solid fa-tag"></i>
+                    <span>Pinned Files</span>
+                </div>
+                <div class="main__extras__element">
+                    <i class="fa-solid fa-share"></i>
+                    <span>Shared Files</span>
+                </div>
+            </div>
+
+            <div class="main__controls">
+                <span>Materials</span>
+                <div class="main__controls__view">
+                    <button>
+                        <i class="fa-solid fa-list active"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-box"></i>
+                    </button>
+                </div>
+            </div>
+
+            
+            <div class="main__materials">
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+                <div class="main__materials__subject">
+                    <div class="main__materials__subject__icon">
+                        <i class="fa-solid fa-folder"></i>
+                    </div>
+
+                    <div class="main__materials__subject__text">
+                        <span>subject name</span>
+                        <span>07 Files</span>
+                    </div>
+                </div>
+
+
+
+            </div>
 
 
             <!-- preloader -->
@@ -254,25 +356,25 @@
 
             <ul class="mobile-content__uploaded-files">
                 <li>
-                    <img src="">
+                    <img src="../">
                     <span>img title here</span>
                     <i class="fa-solid fa-close"></i>
                 </li>
 
                 <li>
-                    <img src="">
+                    <img src="../">
                     <span>img title here</span>
                     <i class="fa-solid fa-close"></i>
                 </li>
 
                 <li>
-                    <img src="">
+                    <img src="../">
                     <span>img title here</span>
                     <i class="fa-solid fa-close"></i>
                 </li>
 
                 <li>
-                    <img src="">
+                    <img src="../">
                     <span>img title here</span>
                     <i class="fa-solid fa-close"></i>
                 </li>
@@ -292,7 +394,7 @@
 
             <div class="sidebar-menu__logobox">
                 <div class="sidebar-menu__logobox__img">
-                    <img src="assets/images/lms-icon.png" alt="">
+                    <img src="../assets/images/lms-icon.png" alt="">
                 </div>
                 <div class="sidebar-menu__logobox__textbox">
                     <span>LMS</span>
@@ -385,7 +487,7 @@
             <!-- details -->
             <div class="navbar-menu__details">
                 <div class="navbar-menu__details__img">
-                    <img src="assets/images/user.jpg">
+                    <img src="../assets/images/user.jpg">
                 </div>
                 <h3 class="navbar-menu__details__name">Student Name</h3>
                 <h4 class="navbar-menu__details__id">Student ID</h4>
