--- a/pages/main-scoreboard.html
+++ b/pages/main-scoreboard.html
@@ -143,7 +143,42 @@
         <header class="header">
 
             <!-- Desktop Version -->
+            <div class="header__box">
+                <button class="header__box__streaks">
+                    <i class="fa-solid fa-fire"></i>
+                    <div class="header__box__streaks__menu"></div>
+                </button>
+                <button class="header__box__notification">
+                    <i class="fa-solid fa-bell"></i>
+                    <div class="header__box__notification__menu"></div>
+                </button>
+                <button class="header__box__profile">
+                    <img src="assets/images/Mohey.jpg" alt="">
+                    <span>1181058</span>
+                    <div class="header__box__profile__menu">
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-gear"></i>
+                                <span>Account Settings</span>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-user"></i>
+                                <span>Profile</span>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-calendar"></i>
+                                <span>Calendar</span>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-wallet"></i>
+                                <span>Financial</span>
+                            </a>
+                        </li>
+                        <a href="./pages/main-login.html" class="signout-btn"> Sign out</a>
+                    </div>
+                </button>
 
+            </div>
 
             <!-- Mobile Version -->
             <div class="mobile-header-controls">
